<resources>
    <string name="app_name">Say It Loud</string>
    <string name="sound_recorder">Sound Recorder</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="play">Play</string>
    <string name="name_of_the_file">Name of the file</string>
    <string name="this_is_the_name_of_the_file">this_is_the_name_of_the_file</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>