<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_sound_recorder_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/sound_recorder"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ed_name"
        android:layout_width="346dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="57dp"
        android:focusableInTouchMode="true"
        android:hint="This_is_the_name_of_the_file"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_start_recording"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="45dp"
        android:layout_toStartOf="@+id/button_pause_recording"
        android:text="@string/start" />

    <Button
        android:id="@+id/button_pause_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="48dp"
        android:layout_toStartOf="@+id/button_stop_recording"
        android:text="@string/pause" />

    <Button
        android:id="@+id/button_stop_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="20dp"
        android:text="@string/stop" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="143dp"
        android:layout_height="61dp"
        android:layout_below="@+id/textview_sound_recorder_heading"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="246dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="22dp"
        android:text="@string/play" />

    <Chronometer
        android:id="@+id/simpleChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="318dp"
        android:layout_marginBottom="365dp" />

    <FrameLayout
        android:id="@+id/fragment_play"
        android:layout_width="match_parent"
        android:layout_height="271dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="461dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">

    </FrameLayout>

</RelativeLayout>
